Step by step guide on adding Model Hub support to libraries (#86)
* Initial page

* Code review from Omar and Julien

Co-authored-by: osanseviero <osanseviero@gmail.com>
Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Repository and modelcard metadata

* Final touches

* Update docs/adding-a-library.md

* Update docs/adding-a-library.md

* Update docs/adding-a-library.md

* Update docs/adding-a-library.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/adding-a-library.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/adding-a-library.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/adding-a-library.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Resolve comments and do a second pass through the docs

* Update adding-a-library.md

Co-authored-by: osanseviero <osanseviero@gmail.com>
Co-authored-by: Julien Chaumond <julien@huggingface.co>
Co-authored-by: Omar Sanseviero <osanseviero@users.noreply.github.com>

--- a/docs/_sections.yml
+++ b/docs/_sections.yml
@@ -7,5 +7,8 @@
 - local: libraries
   title: Libraries
 
+- local: adding-a-library
+  title: Integrating a library to the Hub
+
 - local: inference
   title: Inference
