Fix interfaces path typo (#243)

--- a/.github/workflows/js-widgets-tests.yml
+++ b/.github/workflows/js-widgets-tests.yml
@@ -4,11 +4,11 @@ on:
   push:
     paths:
       - "widgets/**"
-      - "!widgets/lib/interfaces/**"
+      - "!widgets/src/lib/interfaces/**"
   pull_request:
     paths:
       - "widgets/**"
-      - "!widgets/lib/interfaces/**"
+      - "!widgets/src/lib/interfaces/**"
 
 
 jobs:
