Add guide on how to add a new task (#325)
* Add guide on how to add a new task

* Emojify the guide

* Update docs/hub/adding-a-task.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/hub/adding-a-task.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Update docs/hub/adding-a-task.md

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* Add whats a task section

Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/docs/hub/_sections.yml
+++ b/docs/hub/_sections.yml
@@ -10,9 +10,6 @@
 - local: libraries
   title: Libraries
 
-- local: adding-a-library
-  title: Integrating a library to the Hub
-
 - local: inference
   title: Inference
 
@@ -21,3 +18,9 @@
 
 - local: spaces
   title: Spaces documentation (beta)
+
+- local: adding-a-library
+  title: Integrating a library to the Hub
+
+- local: adding-a-task
+  title: Adding a new task to the Hub
