--- a/docs/sagemaker/_sections.yml
+++ b/docs/sagemaker/_sections.yml
@@ -11,5 +11,5 @@
 # - local: getting-started
 #   title: End-to-End Example with training and deployment
 
-- local: faq
-  title: Frequently Asked Questions
+- local: reference
+  title: Reference
