org-cards doc (#756)

--- a/docs/hub/_sections.yml
+++ b/docs/hub/_sections.yml
@@ -19,6 +19,9 @@
 - local: spaces
   title: Spaces documentation
 
+- local: org-cards
+  title: Organization cards
+
 - local: adding-a-library
   title: Integrate a library with the Hub
 
