--- a/.github/workflows/js-widgets-tests.yml
+++ b/.github/workflows/js-widgets-tests.yml
@@ -47,7 +47,7 @@ jobs:
           npm i netlify-cli
 
       - name: Netlify find out whether push to prod
-        if: endsWith(github.ref, '/master')
+        if: endsWith(github.ref, '/main')
         run: |
           echo "::set-env name=NETLIFY_EXTRA_FLAG::--prod"
 
