--- a/js/package.json
+++ b/js/package.json
@@ -7,8 +7,8 @@
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
@@ -17,7 +17,12 @@
 		"@tailwindcss/line-clamp": "^0.2.1",
 		"@types/dom-mediacapture-record": "^1.0.7",
 		"@types/tailwindcss": "^2.2.1",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
 		"autoprefixer": "^10.2.6",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
 		"postcss": "^8.3.1",
 		"postcss-load-config": "^3.0.1",
 		"prettier": "2.3.0",
