--- a/.github/workflows/js-widgets-tests.yml
+++ b/.github/workflows/js-widgets-tests.yml
@@ -47,7 +47,7 @@ jobs:
           npm i netlify-cli
 
       - name: Netlify find out whether push to prod
-        # if: endsWith(github.ref, '/main')
+        if: endsWith(github.ref, '/main')
         run: |
           echo "NETLIFY_EXTRA_FLAG=--prod" >> $GITHUB_ENV
 
