--- a/.github/workflows/js-widgets-tests.yml
+++ b/.github/workflows/js-widgets-tests.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Netlify find out whether push to prod
         if: endsWith(github.ref, '/main')
         run: |
-          echo "::set-env name=NETLIFY_EXTRA_FLAG::--prod"
+          echo "NETLIFY_EXTRA_FLAG=--prod" >> $GITHUB_ENV
 
       - name: Netlify deploy
         working-directory: js
