--- a/.github/workflows/js-widgets-tests.yml
+++ b/.github/workflows/js-widgets-tests.yml
@@ -5,6 +5,11 @@ on:
     paths:
       - "js/**"
       - "!js/src/lib/interfaces/**"
+  pull_request:
+    paths:
+      - "js/**"
+      - "!js/src/lib/interfaces/**"
+
 
 jobs:
   build:
