--- a/js/package.json
+++ b/js/package.json
@@ -12,7 +12,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.173",
 		"@tailwindcss/forms": "^0.3.3",
 		"@tailwindcss/line-clamp": "^0.2.1",
 		"@types/dom-mediacapture-record": "^1.0.7",
