--- a/.github/workflows/js-interfaces-tests.yml
+++ b/.github/workflows/js-interfaces-tests.yml
@@ -22,12 +22,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-      - run: sudo npm i -g typescript@4.2.2
-      - run: node --version
-      - run: tsc --version
-      - name: Install deps
-        run: npm i @types/node
+      - working-directory: js
+        run: |
+          npm ci
       - name: Compile
         working-directory: ./js/src/lib/interfaces
         run: |
-          time tsc *.ts --lib es6,es2016,es2017,es2018,esnext --target es2018 --module commonjs --outDir dist
+          time npx tsc *.ts --lib es6,es2016,es2017,es2018,esnext --target es2018 --module commonjs --outDir dist
