Split into subpages and address some comments

--- a/docs/hub/_sections.yml
+++ b/docs/hub/_sections.yml
@@ -1,7 +1,7 @@
 - local: hugging-face-hub
   title: Hugging Face Hub
 
-- local: repositories
+- local: repositories-main
   title: Repositories
 
 - local: main
