--- a/.github/workflows/js-interfaces-tests.yml
+++ b/.github/workflows/js-interfaces-tests.yml
@@ -3,9 +3,11 @@ name: JS Interfaces
 on:
   push:
     paths:
+      - "js/**"
       - "js/src/lib/interfaces/**"
   pull_request:
     paths:
+      - "js/**"
       - "js/src/lib/interfaces/**"
 
 
@@ -25,7 +27,12 @@ jobs:
       - working-directory: js
         run: |
           npm ci
-      - name: Compile
+      - name: Check that code compiles
         working-directory: ./js/src/lib/interfaces
         run: |
           time npx tsc *.ts --lib es6,es2016,es2017,es2018,esnext --target es2018 --module commonjs --outDir dist
+      - name: Run export-tasks script
+        working-directory: js
+        run: |
+          npx tsm src/scripts/export-tasks.ts
+        # copy/paste this JSON output to any repo that might need it.
