--- a/js/package.json
+++ b/js/package.json
@@ -26,6 +26,7 @@
 		"svelte-preprocess": "^4.0.0",
 		"tailwindcss": "^2.2.19",
 		"tslib": "^2.0.0",
+		"tsm": "^2.2.1",
 		"typescript": "^4.6.3"
 	},
 	"type": "module"
