Revert "Update js-interfaces-tests.yml"
This reverts commit 8168c40c2795c15ffbbe1b6fbf729d151fa12982.

--- a/.github/workflows/js-interfaces-tests.yml
+++ b/.github/workflows/js-interfaces-tests.yml
@@ -5,6 +5,10 @@ on:
     paths:
       - "js/**"
       - "js/src/lib/interfaces/**"
+  pull_request:
+    paths:
+      - "js/**"
+      - "js/src/lib/interfaces/**"
 
 
 jobs:
