Add docs for Adapter Transformers

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -33,6 +33,8 @@
         title: SpaCy
       - local: transformers
         title: transformers
+      - local: adapter-transformers
+        title: adapter-transformers
   - local: models-interacting
     title: Interacting with Models on the Hub
   - local: models-widgets
