Docs Revamp: Organizations and Security (#150)
Add docs for organizations, security, API

Co-authored-by: Steven Liu <59462357+stevhliu@users.noreply.github.com>
Co-authored-by: Omar Sanseviero <osanseviero@gmail.com>

--- a/docs/hub/_sections.yml
+++ b/docs/hub/_sections.yml
@@ -12,3 +12,12 @@
 
 - local: datasets-main
   title: Datasets
+
+- local: organizations-main
+  title: Organizations
+
+- local: security-main
+  title: Security
+
+- local: api-main
+  title: Hub API Endpoints
