--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -68,3 +68,28 @@
     title: Spaces Configuration Reference
   - local: spaces-changelog
     title: Spaces Changelog
+  - local: other-main
+    title: Other
+    sections:    
+    - local: organizations-main
+      title: Organizations
+      - local: organizations-managing
+        title: Managing Organizations
+      - local: organizations-cards
+        title: Organization Cards
+      - local: organizations-security
+        title: Access control in organizations
+    - local: security-main
+      title: Security
+      sections:
+      - local: security-tokens
+        title: User Access Tokens
+      - local: security-gpg
+        title: Signing commits with GPG
+      - local: security-malware
+        title: Malware Scanning
+    - local: api-main
+      title: Hub API Endpoints
+      sections:
+      - local: api-webhook
+        title: Webhook
