Add Sentence Transformers docs

--- a/docs/hub/_sections.yml
+++ b/docs/hub/_sections.yml
@@ -62,6 +62,9 @@
 - local: espnet
   title: ESPnet
 
+- local: sentence-transformers
+  title: Sentence Transformers
+
 - local: spacy
   title: SpaCy
 
