Clean up content for consistency

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -41,6 +41,10 @@
         title: Asteroid
       - local: espnet
         title: ESPnet
+      - local: fastai
+        title: FastAI
+      - local: keras
+        title: Keras
       - local: sentence-transformers
         title: Sentence Transformers
       - local: tensorboard
