Split models-interacting into two pages

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -50,8 +50,10 @@
         title: SpeechBrain
       - local: tensorboard
         title: TensorBoard
-  - local: models-interacting
-    title: Interacting with Models on the Hub
+  - local: models-uploading
+    title: Uploading Models
+  - local: models-downloading
+    title: Downloading Models
   - local: models-widgets
     title: Model Widgets
   - local: models-inference
