--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -2,6 +2,7 @@
   title: 🤗 Hugging Face Hub
 - local: repositories
   title: Repositories
+  isExpanded: true
   sections:
   - local: repositories-getting-started
     title: Getting Started with Repositories
@@ -15,6 +16,7 @@
     title: Licenses    
 - title: Models
   local: models
+  isExpanded: true
   sections:
   - local: models-the-hub
     title: The Model Hub
@@ -69,6 +71,7 @@
         title: Tasks
 - title: Datasets
   local: datasets
+  isExpanded: true
   sections:
   - local: datasets-overview
     title: Datasets Overview
@@ -82,6 +85,7 @@
     title: Adding New Datasets
 - local: spaces
   title: Spaces
+  isExpanded: true
   sections:
   - local: spaces-overview
     title: Spaces Overview
@@ -112,6 +116,7 @@
     title: Spaces Changelog
 - local: other
   title: Other
+  isExpanded: true
   sections:    
   - local: organizations
     title: Organizations
