--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -23,15 +23,19 @@
     sections:
     - local: models-cards-co2
       title: Carbon Emissions
+  - local: models-uploading
+    title: Uploading Models
+  - local: models-downloading
+    title: Downloading Models
   - local: models-libraries
-    title: Libraries
+    title: Integrated Libraries
     sections:
       - local: spacy
         title: SpaCy
       - local: transformers
         title: transformers
       - local: adapter-transformers
-        title: adapter-transformers
+        title: Adapter Transformers
       - local: allennlp
         title: AllenNLP
       - local: asteroid
@@ -50,10 +54,6 @@
         title: SpeechBrain
       - local: tensorboard
         title: TensorBoard
-  - local: models-uploading
-    title: Uploading Models
-  - local: models-downloading
-    title: Downloading Models
   - local: models-widgets
     title: Model Widgets
   - local: models-inference
@@ -90,14 +90,8 @@
       title: Handling Spaces Dependencies
     - local: spaces-settings
       title: Spaces Settings
-    - local: spaces-using-opencv
-      title: Using OpenCV in Spaces
     - local: spaces-organization-cards
       title: Using Spaces for Organization Cards
-    - local: spaces-more-ways-to-create
-      title: More ways to create Spaces
-    - local: spaces-github-actions
-      title: Managing Spaces with Github Actions      
   - local: spaces-sdks-gradio
     title: Gradio Spaces
   - local: spaces-sdks-streamlit
@@ -110,6 +104,15 @@
     title: Spaces Configuration Reference
   - local: spaces-changelog
     title: Spaces Changelog
+  - local: spaces-advanced
+    title: Advanced Topics
+    sections:
+    - local: spaces-using-opencv
+      title: Using OpenCV in Spaces
+    - local: spaces-more-ways-to-create
+      title: More ways to create Spaces
+    - local: spaces-github-actions
+      title: Managing Spaces with Github Actions      
 - local: other
   title: Other
   sections:    
