Adjust certain paths, add widget examples page

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -58,6 +58,9 @@
         title: TensorBoard
   - local: models-widgets
     title: Model Widgets
+    sections:
+      - local: models-widgets-examples
+        title: Widget Examples
   - local: models-inference
     title: Inference API docs
   - local: models-faq
