Add new doc page to _toctree

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -25,6 +25,8 @@
     sections:
     - local: models-cards-co2
       title: Carbon Emissions
+    - local: models-gated
+      title: Gated models
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
