--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -48,6 +48,8 @@
         title: fastai
       - local: keras
         title: Keras
+      - local: ml-agents
+        title: ML-Agents
       - local: sentence-transformers
         title: Sentence Transformers
       - local: spacy
