--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -50,12 +50,16 @@
         title: Keras
       - local: ml-agents
         title: ML-Agents
+      - local: rl-baselines3-zoo
+        title: RL-Baselines3-Zoo
       - local: sentence-transformers
         title: Sentence Transformers
       - local: spacy
         title: spaCy
       - local: speechbrain
         title: SpeechBrain
+      - local: stable-baselines3
+        title: Stable-Baselines3
       - local: stanza
         title: Stanza
       - local: tensorboard
