--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -16,6 +16,7 @@ jobs:
           node-version: '16'
   build:
     uses: huggingface/doc-builder/.github/workflows/build_pr_documentation.yml@main
+    needs: build_test
     with:
       commit_sha: ${{ github.event.pull_request.head.sha }}
       pr_number: ${{ github.event.number }}
