--- a/.github/workflows/build_pr_documentation.yml
+++ b/.github/workflows/build_pr_documentation.yml
@@ -1,12 +1,9 @@
 name: Build PR Documentation
 
 on:
-  push:
+  pull_request:
     paths:
       - "docs/hub/**"
-    branches:
-      - "*"
-      - "!main"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
