--- a/.github/workflows/sagemaker_build_pr_documentation.yml
+++ b/.github/workflows/sagemaker_build_pr_documentation.yml
@@ -1,9 +1,9 @@
-name: Build PR Documentation
+name: Build sagemaker PR Documentation
 
 on:
   pull_request:
     paths:
-      - "docs/hub/**"
+      - "docs/sagemaker/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -16,6 +16,6 @@ jobs:
       commit_sha: ${{ github.event.pull_request.head.sha }}
       pr_number: ${{ github.event.number }}
       package: hub-docs
-      package_name: hub
-      path_to_docs: hub-docs/docs/hub/
+      package_name: sagemaker
+      path_to_docs: hub-docs/docs/sagemaker/
       additional_args: --not_python_module
