Add timm to toctree under Integrated Libraries

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -66,6 +66,8 @@
         title: Stanza
       - local: tensorboard
         title: TensorBoard
+      - local: timm
+        title: timm
   - local: models-widgets
     title: Model Widgets
     sections:
