Rename the models-cards and models-cards-co2 pages and adjust all links accordingly. (#321)
* Rename model-cards page, adjust all references.

* Rename the models-cards-co2 file, adjust paths.

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -22,10 +22,10 @@
   sections:
   - local: models-the-hub
     title: The Model Hub
-  - local: models-cards
+  - local: model-cards
     title: Model Cards
     sections:
-    - local: models-cards-co2
+    - local: model-cards-co2
       title: Carbon Emissions
     - local: models-gated
       title: Gated models
