--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -147,6 +147,8 @@
       title: Organization Cards
     - local: organizations-security
       title: Access control in organizations
+  - local: doi
+    title: Digital Object Identifier (DOI)
   - local: security
     title: Security
     sections:
