Simple GPU instructions: torch / JAX / tensorflow.

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -134,6 +134,8 @@
       title: More ways to create Spaces
     - local: spaces-github-actions
       title: Managing Spaces with Github Actions      
+    - local: spaces-gpus
+      title: Using GPU Spaces
 - local: other
   title: Other
   isExpanded: true
