Spaces: simple GPU instructions for PyTorch, JAX and tensorflow (#416)
* Simple GPU instructions: torch / JAX / tensorflow.

* Update overview to mention upgrades.

* Move GPU section before Gradio, as suggested in review.

* Add suggestions from code review.

* Add more detail and screenshots to `spaces-gpus`

* tweak

* consistency tweak

* Fix typo in path.

Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -113,6 +113,8 @@
       title: Spaces Settings
     - local: spaces-organization-cards
       title: Using Spaces for Organization Cards
+  - local: spaces-gpus
+    title: Spaces GPU Upgrades
   - local: spaces-sdks-gradio
     title: Gradio Spaces
   - local: spaces-sdks-streamlit
