--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -13,9 +13,9 @@
   - local: notifications
     title: Notifications
   - local: repositories-next-steps
-    title: Next Steps    
+    title: Next Steps
   - local: repositories-licenses
-    title: Licenses    
+    title: Licenses
 - title: Models
   local: models
   isExpanded: true
@@ -139,7 +139,7 @@
 - local: other
   title: Other
   isExpanded: true
-  sections:    
+  sections:
   - local: organizations
     title: Organizations
     sections:
@@ -149,6 +149,8 @@
       title: Organization Cards
     - local: organizations-security
       title: Access control in organizations
+  - local: billing
+    title: Billing
   - local: doi
     title: Digital Object Identifier (DOI)
   - local: security
