handle sagemaker docs

--- a/.github/workflows/sagemaker_delete_doc_comment.yml
+++ b/.github/workflows/sagemaker_delete_doc_comment.yml
@@ -7,9 +7,13 @@ on:
 
 jobs:
   delete:
-    uses: huggingface/doc-builder/.github/workflows/delete_doc_comment.yml@main
+    uses: huggingface/doc-builder/.github/workflows/delete_doc_comment.yml@use_hf_hub
     with:
       pr_number: ${{ github.event.number }}
       package: hub-docs
       package_name: sagemaker
+    secrets:
+      token: ${{ secrets.HF_DOC_PUSH }}
+      comment_bot_token: ${{ secrets.HUGGINGFACE_PUSH }}
+
 
