--- a/.github/workflows/sagemaker_build_pr_documentation.yml
+++ b/.github/workflows/sagemaker_build_pr_documentation.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   build:
-    uses: huggingface/doc-builder/.github/workflows/build_pr_documentation.yml@main
+    uses: huggingface/doc-builder/.github/workflows/build_pr_documentation.yml@use_hf_hub
     with:
       commit_sha: ${{ github.event.pull_request.head.sha }}
       pr_number: ${{ github.event.number }}
@@ -19,3 +19,7 @@ jobs:
       package_name: sagemaker
       path_to_docs: hub-docs/docs/sagemaker/
       additional_args: --not_python_module
+    secrets:
+      token: ${{ secrets.HF_DOC_PUSH }}
+      comment_bot_token: ${{ secrets.HUGGINGFACE_PUSH }}
+
