--- a/.github/workflows/update-moon-landing.yml
+++ b/.github/workflows/update-moon-landing.yml
@@ -12,15 +12,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: huggingface/moon-landing
+          ref: "main"
           token: ${{ secrets.MOONLANDING_PUSH }}
+          path: "moon-landing"
 
       - name: Make changes to pull request
-        run: git submodule update --init --recursive && cd server/hub-docs && git checkout ${{ github.sha }}
+        run: cd moon-landing && git submodule update --init --recursive && cd server/hub-docs && git checkout ${{ github.sha }}
 
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
+          path: "moon-landing"
           token: ${{ secrets.MOONLANDING_PUSH }}
           commit-message: ⬆️ Upgrade hub-docs with https://github.com/huggingface/hub-docs/commit/${{ github.sha }}
           committer: machineuser <tech@huggingface.co>
