--- a/.github/workflows/update-moon-landing.yml
+++ b/.github/workflows/update-moon-landing.yml
@@ -15,9 +15,10 @@ jobs:
           ref: "main"
           token: ${{ secrets.MOONLANDING_PUSH }}
           path: "moon-landing"
+          submodules: true
 
       - name: Make changes to pull request
-        run: cd moon-landing && git submodule update --init --recursive && cd server/hub-docs && git checkout ${{ github.sha }}
+        run: cd moon-landing && git checkout ${{ github.sha }}
 
       - name: Create Pull Request
         id: cpr
