--- a/.github/workflows/update-moon-landing.yml
+++ b/.github/workflows/update-moon-landing.yml
@@ -1,9 +1,9 @@
 on:
   push:
-    # branches:
-    #   - main
-    # paths:
-    #   - "js/**"
+    branches:
+      - main
+    paths:
+      - "js/**"
 
 jobs:
   createPullRequest:
