This github workflow should run on `/tasks` as well

--- a/.github/workflows/js-check-tests.yml
+++ b/.github/workflows/js-check-tests.yml
@@ -1,9 +1,10 @@
-name: JS Widgets
+name: JS check (svelte-check)
 
 on:
   push:
     paths:
       - "js/**"
+      - "tasks/**"
       # - "!js/src/lib/interfaces/**"
 
 jobs:
