--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -123,6 +123,8 @@
     title: Static HTML Spaces
   - local: spaces-sdks-python
     title: Custom Python Spaces
+  - local: spaces-embedding
+    title: Embedding your Space
   - local: spaces-config-reference
     title: Spaces Configuration Reference
   - local: spaces-changelog
