Added tutorial doc on how to add a Space to Arxiv (#530)
* arxiv blog post

* blog post

* finish tutorial

* tweak

* Apply suggestions from code review

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* rename

* add references to datasets

Co-authored-by: Julien Chaumond <julien@huggingface.co>

* rename

* rename

* added links

* wording tweaks

Co-authored-by: Julien Chaumond <julien@huggingface.co>

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -137,7 +137,9 @@
     - local: spaces-more-ways-to-create
       title: More ways to create Spaces
     - local: spaces-github-actions
-      title: Managing Spaces with Github Actions      
+      title: Managing Spaces with Github Actions 
+    - local: spaces-add-to-arxiv
+      title: How to Add a Space to ArXiv      
 - local: other
   title: Other
   isExpanded: true
