--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -29,6 +29,11 @@
       title: Carbon Emissions
     - local: models-gated
       title: Gated models
+    - local: model-card-guidebook
+      title: Model Card Guidebook
+      sections:
+      - local: model-card-annotated
+        title: Annotated Model Card
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
