spaces embedding dedicated doc (#533)
* spaces embedding dedicated doc

* spaces embedding doc post review changes

* add gradio doc link

* spaces-embed: space needs to be public

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -125,6 +125,8 @@
     title: Static HTML Spaces
   - local: spaces-sdks-python
     title: Custom Python Spaces
+  - local: spaces-embed
+    title: Embed your Space
   - local: spaces-config-reference
     title: Spaces Configuration Reference
   - local: spaces-changelog
