adding user studies to _toctree

--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -34,6 +34,9 @@
       sections:
       - local: model-card-annotated
         title: Annotated Model Card
+      - local: model-cards-user-studies
+        title: User Study
+      - 
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
