--- a/docs/hub/_toctree.yml
+++ b/docs/hub/_toctree.yml
@@ -29,14 +29,13 @@
       title: Carbon Emissions
     - local: models-gated
       title: Gated models
-    - title: Model Card Guidebook
-      local: model-card-guidebook
+    - local: model-card-guidebook
+      title: Model Card Guidebook
       sections:
       - local: model-card-annotated
         title: Annotated Model Card
       - local: model-cards-user-studies
         title: User Study
-      - 
   - local: models-uploading
     title: Uploading Models
   - local: models-downloading
